Added cs170 lec10

--- a/CS170/Lectures/lecture3.tex
+++ b/CS170/Lectures/lecture3.tex
@@ -10,7 +10,7 @@ useful to derive the following result.
 
 \begin{theorem} [Master Theorem]
     Suppose we have a recurrence
-    \[ T(n) = a T(\frac{n}{b}) + cn^d \]
+    \[ T(n) = a T\qty(\frac{n}{b}) + cn^d \]
     then, we have
     \[ T(n) = \begin{cases}
         \Theta(n^d) & a < b^d \\
