--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -11,4 +11,5 @@
     \include{./Lectures/lecture7.tex}
     \include{./Lectures/lecture8.tex}
     \include{./Lectures/lecture9.tex}
+    \include{./Lectures/lecture10.tex}
 \end{document}
