--- a/EECS126/Lectures/lecture9.tex
+++ b/EECS126/Lectures/lecture9.tex
@@ -23,7 +23,7 @@ So, convergence in expectation is even weaker than WLLN (convergence in probabil
 We will show the first implication by showing something stronger; that almost sure convergence implies convergence in probability.
 
 \begin{proof} [A.S. implies Convergence in Probability]
-    Fix $\varepsilon > 0$ and let $X_n$ converge to $X$ almost surely. Define the following eevents:
+    Fix $\varepsilon > 0$ and let $X_n$ converge to $X$ almost surely. Define the following events:
     \begin{align*}
         A_n &= \{ |X_n - X| > \varepsilon \} \\
         B_n &= \cup_{m \geq n} A_m \\
