--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -12,4 +12,5 @@
     \include{./Lectures/lecture8.tex}
     \include{./Lectures/lecture9.tex}
     \include{./Lectures/lecture10.tex}
+    \include{./Lectures/lecture11.tex}
 \end{document}
